--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "lucide-react": "^0.468.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.4",
+    "openai": "^4.73.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-email": "^4.0.15",
