--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-portal": "^1.1.6",
-    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.9",
@@ -65,7 +66,7 @@
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "composio-core": "^0.5.32",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
@@ -77,11 +78,14 @@
     "framer-motion": "^11.18.2",
     "geist": "^1.3.0",
     "html-to-image": "^1.11.11",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.468.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.4.3",
     "openai": "^4.73.1",
     "react": "^18.3.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-email": "^4.0.15",
     "react-hook-form": "^7.54.2",
