--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@google/generative-ai": "^0.8.0",
     "@hookform/resolvers": "^3.10.0",
     "@langchain/cerebras": "^0.0.1",
